# hed2

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  biome.json  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  taplo.toml  tauri.conf.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
.github/wrokflows/: release.yml
assets/: icon.icns
capabilities/: default.json
electron/: bundle.ts  package.json  tsconfig.json  vite.config.ts
electron/src/: consts.ts  global.d.ts  main.ts  preload.ts  sys.ts  window-state.ts
fixture/: hosts
parser/: package.json  tsconfig.json  tsconfig.node.json
parser/fixture/: hosts
parser/src/: index.ts
parser/test/: parser.test.ts
scripts/: dev.js  run-browser.ts  run-electron.ts  run-tauri.ts  run.ts  set-pkg-version.ts
src/: command.rs  main.rs  parser.rs  sys.rs
src/snapshots/: Hed2__parser__tests__content_to_lines.snap  Hed2__parser__tests__lines_to_list.snap  Hed2__parser__tests__lines_to_text.snap  Hed2__parser__tests__lines_to_text_human.snap  Hed2__parser__tests__lines_to_text_unix.snap  Hed2__parser__tests__lines_to_text_win.snap  Hed2__parser__tests__list_to_lines.snap  Hed2__parser__tests__text_to_groups.snap  Hed2__parser__tests__text_to_lines.snap
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: main.rs  parser.rs  result_ext.rs  sys.rs
tauri/src/snapshots/: Hed2__parser__tests__lines_to_text.snap  Hed2__parser__tests__text_to_lines.snap
test/: package.json
test/parser/: parser.test.ts
ui/: App.tsx  app.tsx  atom.ts  consts.ts  enum.ts  index.html  input.css  main.tsx  output.css  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  types.d.ts  vite.config.ts
ui/atom/: current-group-name.ts  current-group.ts  editor-cfg.ts  groups.ts  index.ts  primitive.ts  system-hosts-draft.ts
ui/components/: advanced-input.tsx  badge.tsx  button.tsx  card.tsx  common-header.tsx  context-menu.tsx  dropdown-menu.tsx  edit-input.tsx  icons.tsx  index.ts  input-with-validate.tsx  input.tsx  resizable.tsx  scroll-area.tsx  search-input.tsx  separator.tsx  sheet.tsx  sidebar.tsx  simple-form.tsx  skeleton.tsx  switch.tsx  tabs.tsx  tooltip.tsx
ui/context/: app.tsx  global.tsx  index.tsx
ui/hooks/: use-boolean.ts
ui/src/: app.tsx  consts.ts  global.d.ts  main.tsx  types.ts
ui/utils/: group.ts  ipc.ts  parser.ts  storage.ts
ui/views/: app-header.tsx  editor-body.tsx  editor-header.tsx  editor-kind-toggle.tsx  editor.tsx  groups.tsx  list-editor.tsx  profiles.tsx  text-editor.tsx  theme-toggle.tsx
(+54 files in other folders)
