[package]
name = "hed2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "Hed2"
path = "src/main.rs"

[dependencies]
indexmap = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
insta = "1.41.1"
