[package]
name = "hed2-tauri"
version = "0.1.0"
description = "hed2 desktop by tauri"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
edition = "2021"
publish = false

[[bin]]
name = "Hed2"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
