[package]
name = "hed2-tauri"
version = "0.1.0"
description = "A hosts file editor desktop client"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
repository = "https://github.com/shixinhuang99/hed2"
homepage = "https://github.com/shixinhuang99/hed2"
edition = "2021"
publish = false
license = "MIT"

[[bin]]
name = "Hed2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
opener = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
